--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
   },
   "dependencies": {
     "pinia": "^2.1.7",
+    "stylelint": "^15.11.0",
+    "stylelint-config-prettier": "^9.0.5",
+    "stylelint-config-standard": "^34.0.0",
+    "stylelint-prettier": "^4.0.2",
+    "stylelint-stylus": "^0.18.0",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
   },
@@ -29,6 +34,8 @@
     "eslint-plugin-vue": "^9.17.0",
     "npm-run-all2": "^6.1.1",
     "prettier": "^3.0.3",
+    "stylus": "^0.62.0",
+    "stylus-loader": "^8.1.0",
     "typescript": "~5.3.0",
     "vite": "^5.0.11",
     "vue-tsc": "^1.8.27"
